src/test/ui/error-codes/E0010.stderr
error[E0010]: allocations are not allowed in constants
  --> $DIR/E0010.rs:14:24
   |
14 | const CON : Box<i32> = box 0; //~ ERROR E0010
   |                        ^^^^^ allocation not allowed in constants

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0010"
